# DRL-AI-Robotics

./: README.md  motor_simulation.ipynb  test.py
cpp_code/: blackbox.cpp  blackbox.h  dyn_pid.cpp  dyn_pid.h
labview_CoDe/: BlackBox_controller.vi  BlackBox_controller_1d.vi  BlackBox_filtered _1d.vi  BlackBox_filtered.vi  Control 1.ctl  DynPid_filtered.vi  Dyn_pid_controller.vi  Main.vi  MainBenchmarkPid.vi  MainBenchmarkPid_filtered.vi  MainSimplePid.vi  MainV2.vi  Untitled 2.vi  angle_modulo.vi  center_detector.vi  double_exponential_smoothing _2.vi  double_exponential_smoothing.vi  exampleWriteToMyRIO.vi  input.vi  motors_id.vi  observator.vi  offset.vi  pid.vi  pid_motor.vi  pid_tanh.vi  scaled_error.vi  signal_lim.vi  target_trajectory.vi  testCam.vi  tests.aliases  tests.lvlps  tests.lvproj
python_code/: Test_rewards.ipynb  ball_simulation.ipynb  ball_simulation_final.ipynb  black_box_training_genetic.ipynb  controller_comparison.ipynb  ddpg_training.ipynb  dyn_pid_training_final_1d.ipynb  motor_position_control.ipynb  motor_simulation.ipynb  test.py
python_code/src/: __init__.py  constants.py
python_code/src/DDPG/: __init__.py  controllers.py  train_analysis.py
python_code/src/ball_balancer/: __init__.py  environement.py  simulation.py  test_environement.py
python_code/src/ball_simulation/: README.md  (+6 more)
rust_code/: Cargo.toml  build.rs
rust_code/src/: lib.rs
src/: __init__.py
src/ai_simulation/: __init__.py  environement_constants.py
src/motor_simulation/: __init__.py  motor_position_control.py
src/sys_simulation/: __init__.py  neural_net.py
(+1003 files in other folders)
