[package]
name = "rust_code"
version = "0.1.0"
authors = ["BenInTheBox <benoit.fontannaz@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_labview_basic"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"

[build-dependencies]
cbindgen = "0.13"
